--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Chronomly
-description: Programmer
+description: Twitch Streamer, Founder of @SmoreSoftware & @QuantumDevs
